# forge

./: .gitignore  LICENSE  README.md  pyproject.toml  quickstart.py
.github/workflows/: deps.yml  nextrelease.yml  test.yml
forge/: __init__.py  checks.py  cli.py  core.py  default_settings.py  email.py  forge_isort.cfg  logging.py  models.py
forge/auth/: apps.py  backends.py
forge/auth/templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
forge/cli/: __init__.py  core.py  db.py  heroku.py  tailwind.py
forge/forms/: apps.py
forge/forms/templates/django/forms/: default.html
forge/forms/templates/django/forms/errors/list/: default.html
forge/management/commands/: dbconnected.py  dbwait.py
forge/scaffold/template/: .env  Procfile  package.json  tailwind.config.js
forge/scaffold/template/.github/workflows/: test.yml
forge/scaffold/template/app/: settings.py  urls.py  views.py
forge/scaffold/template/app/static/src/: tailwind.css
forge/scaffold/template/app/teams/: admin.py  models.py  urls.py
forge/scaffold/template/app/templates/: base.html  home.html
forge/scaffold/template/app/tests/: test_urls.py
forge/scaffold/template/app/users/: admin.py  forms.py  models.py  urls.py  views.py
forge/scaffold/template/app/users/templates/registration/: signup.html
forge/scaffold/template/app/users/templates/users/: user_form.html
forge/scaffold/template/scripts/: install
forge/standards/: apps.py  models.py
forge/standards/checks/: __init__.py  urls.py
forge/tailwind/: __init__.py  core.py
forge/templates/: 400.html  403.html  404.html  500.html  README.md  base.html  forge_base.html
forge/views/: mixins.py
scripts/: format  install  package-test  pre-commit  quickstart-test  test
tests/: settings.py  test_email.py  test_logging.py  test_standards.py  urls.py
