[tool.poetry]
name = "forge"
version = "0.15.0"
description = "Quickly build a professional web app using Django."
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.forgepackages.com/"
documentation = "https://www.forgepackages.com/docs/"
repository = "https://github.com/forgepackages/forge"
keywords = ["django", "saas", "forge", "framework"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
forge = "forge.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"

forge-core = "<1.0.0"
forge-format = "<1.0.0"
forge-work = "<1.0.0"
forge-heroku = "<1.0.0"
forge-db = "^0.3.0"
forge-tailwind = "<1.0.0"

Django = "^4.0"
django-widget-tweaks = "^1.4.12"

# Part of settings
dj-database-url = "^1.0.0"
whitenoise = "^6.0.0"
python-dotenv = "^0.20.0"

# CLI
click = "^8.1.0"

# For Redis caching (the suggested default)
redis = "^4.2.2"
hiredis = "^2.0.0"

# Testing and debugging
ipdb = "^0.13.9"
pytest = "^7.0.0"
pytest-django = "^4.5.2"


[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
