[tool.poetry]
name = "forge"
version = "0.21.1"
description = "Quickly build a professional web app using Django."
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.forgepackages.com/"
documentation = "https://www.forgepackages.com/docs/"
repository = "https://github.com/forgepackages/forge"
keywords = ["django", "saas", "forge", "framework"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
forge = "forge.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"

forge-core = "<1.0.0"
forge-heroku = "<1.0.0"
forge-db = "^0.3.0"
forge-tailwind = "<1.0.0"
forge-work = "<1.0.0"

Django = "^4.0"
django-widget-tweaks = "^1.4.12"

# Part of settings
dj-database-url = "^1.0.0"
whitenoise = "^6.0.0"
python-dotenv = "*"  # forge-core specifies a stricter version, just want to be clear we need it here too

# CLI
click = "^8.1.0"

# For Redis caching (the suggested default)
redis = "^4.2.2"
hiredis = "^2.0.0"

# Testing and debugging
pytest = "^7.0.0"
pytest-django = "^4.5.2"
ipython = "^8.5.0"

# Formatting and linting
black = "^22.12.0"
ruff = "^0.0.194"
coverage = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
